# testovoe_kode

./: .gitignore  CMakeLists.txt  README.md  example.txt
App/: CMakeLists.txt  version.txt
App/inc/: AppController.hpp
App/res/: resource.h  version.rc
App/src/: AppController.cpp  main.cpp  main2.cpp
ObjectLib/: CMakeLists.txt  version.txt
ObjectLib/inc/: Object.hpp  ObjectFactory.hpp
ObjectLib/inc/Groupers/: AlphabetGrouper.hpp  DistanceGrouper.hpp  Grouper.hpp  TimeGrouper.hpp  TypeGrouper.hpp
ObjectLib/inc/ObjImplementations/: Building.hpp  Car.hpp  Human.hpp  Tree.hpp
ObjectLib/inc/Object/: Object.hpp  ObjectFactory.hpp  ObjectsController.hpp
ObjectLib/inc/Object/Impl/: Building.hpp  Car.hpp  Human.hpp  Tree.hpp
ObjectLib/inc/Reader/: ReadWriteInterface.hpp
ObjectLib/inc/Reader/Implementations/: FileReader.hpp  FileReaderWrite.hpp
ObjectLib/inc/Utils/: Geo.hpp  Time.hpp
ObjectLib/res/: resource.h  version.rc
ObjectLib/src/: Object.cpp  ObjectFactory.cpp
ObjectLib/src/Groupers/: AlphabetGrouper.cpp  DistanceGrouper.cpp  Grouper.cpp  TimeGrouper.cpp  TypeGrouper.cpp
ObjectLib/src/ObjImplementations/: Building.cpp  Human.cpp  Tree.cpp  Сar.cpp
ObjectLib/src/Object/: Object.cpp  ObjectFactory.cpp  ObjectsController.cpp
ObjectLib/src/Object/Impl/: Building.cpp  Human.cpp  Tree.cpp  Сar.cpp
ObjectLib/src/Reader/Implementations/: FileReader.cpp  (+1 more)
cmakefunctions/: Loader.cmake
cmakefunctions/cmake/executable/: build_number.cmake
cmakefunctions/cmake/functions/: CMakeCore.cmake  config.cmake  group.cmake  setName.cmake
